2008-01-10  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-gecko-services.cpp: 
	Fix crash on shutdown using xulrunner 1.8.x
	(bug #503317 -  Markus Kanet)
	
	* src/yelp-search-parser.c: 
	Get a beagle client if it's available
	allowing beagle to be used again
	(bug #504163)

=== 2.21.2 ===
2008-01-07  Don Scorgie  <dscorgie@svn.gnome.org>

	* configure.in:
	* NEWS:
	Version 2.21.2

2008-01-07  Don Scorgie  <dscorgie@svn.gnome.org>

	* configure.in: 
	* src/yelp-io-channel.c:
	* src/yelp-info-parser.c:
	* src/yelp-utils.c:
	* src/Makefile.am:
	Add LZMA support
	bug #470990 - Per Øyvind Karlsen

	* src/yelp-window.c: 
	Fix find bar up to look more like epiphany
	Bug #483305 - Michael Monreal
	
	* src/yelp-settings.c: 
	Make colours reflect theme better

	* src/yelp-search-parser.c:
	Fix crash on NULL search string.  Again.
	Correct a small typo in translator comment

	* README:
	Update slightly to remove scrollkeeper references
	
2008-01-04  Shaun McCance  <shaunm@gnome.org>

	* data/toc.xml.in:
	- String corrections from Seán de Búrca, fixed #505797

=== 2.21.1 ===
2007-12-03  Don Scorgie  <dscorgie@svn.gnome.org>

	* configure.in:
	* NEWS:
	Version  2.21.1

2007-11-27  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-toc.c:
	* src/yelp-search-parser.c:
	* src/yelp-utils.c:
	* data/toc.xml.in:
	* stylesheets/toc2html.xsl:
	Port to Rarian 0.8 series

2007-11-07  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-utils.c: 
	x-yelp-toc uri scheme frags now strip leading '#' 
	and '?'s (bug #482290)
	
	* src/yelp-window.c: 
	Fix debug build (bug #492882)
	
	* src/yelp-window.c: 
	Fix stupidity in loading HTML docs
	(bug #493594 - Matthias Clasen)

	* src/yelp-search-parser.c: 
	Fix NULL-checking of URI in slow search
	(bug #493751)

=== 2.20.0 ===

2007-09-17  Don Scorgie  <dscorgie@svn.gnome.org>

	* configure.in:
	* NEWS:
	Version 2.20.0

2007-09-06  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Make sure we jump to anchors (Don)
